tenzir/integration/data/reference/pipelines_local/test_print_nested_json_in_csv_and_json/step_03.ref
error: field c is not of type record
 --> <input>:1:134
  |
1 | from /Users/balavinaithirthan/tenzirCopies/tenzirNoPlugCopy/tenzir/integration/data/inputs/json/nested-object.json read json | print a.b.c json
  |                                                                                                                                      ^^^^^ 
  |